syntax = "proto3";

package com.chuntao.service;

import "google/protobuf/timestamp.proto";
import "sensor.proto";
import "hvac.proto";

option java_multiple_files = true;
option java_package = "com.chuntao.service";
option java_outer_classname = "NotificationService";

// Notification Service: monitor air index and analyse data
service Notification {
  // Server-side streaming RPC for receiving notifications based on analyze response
  rpc SensorNotifications(AnalyseResponse) returns (stream SensorMessage) {}
  // Server-side streaming RPC for receiving notifications based on HVAC response
  rpc HvacNotifications(HvacResponse) returns (stream HvacMessage) {}
}

message SensorMessage {
  string location = 1;
  string air_quality = 2;
  string alert = 3;
  string advice = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message HvacMessage {
  bool status = 1;
  string message = 2;
  google.protobuf.Timestamp updated_time = 3;
}